test/extended/testdata/router/awslb/awslbcontroller.yaml
kind: AWSLoadBalancerController
apiVersion: networking.olm.openshift.io/v1alpha1
metadata:
  name: cluster
spec:
  subnetTagging: Auto
