test/extended/testdata/router/awslb/podsvc.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: web-server
  name: web-server-1
spec:
  containers:
  - image: quay.io/openshifttest/nginx-alpine@sha256:f266733786efb10c4353d4b44ada6f22434e983d22f0975d20803f1817d38f56
    name: nginx
    ports:
    - containerPort: 8080
    - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: service-unsecure
  name: service-unsecure
spec:
  ports:
  - name: http
    port: 27017
    protocol: TCP
    targetPort: 8080
  selector:
    name: web-server
  type: NodePort
